// Vitest Snapshot v1

exports[`calculates recent cycles > recent cycles 1`] = `
[
  {
    "endActive": 2018-03-05T07:59:00.000Z,
    "endOccupied": 2018-03-05T08:00:00.000Z,
    "outlier": false,
    "parts": [
      {
        "oper": "UNLOAD",
        "part": "part4-2",
      },
      {
        "oper": "LOAD",
        "part": "part3-1",
      },
    ],
    "startTime": 2018-03-05T07:39:00.000Z,
    "station": "L/U #1",
  },
  {
    "endActive": 2018-03-05T08:52:00.000Z,
    "endOccupied": 2018-03-05T09:00:00.000Z,
    "outlier": true,
    "parts": [
      {
        "oper": "UNLOAD",
        "part": "part4-2",
      },
      {
        "oper": "LOAD",
        "part": "part3-1",
      },
    ],
    "startTime": 2018-03-05T08:32:00.000Z,
    "station": "L/U #1",
  },
  {
    "endActive": 2018-03-05T05:59:00.000Z,
    "endOccupied": 2018-03-05T06:00:00.000Z,
    "outlier": false,
    "parts": [
      {
        "oper": "abcd",
        "part": "part1-1",
      },
    ],
    "startTime": 2018-03-05T05:31:00.000Z,
    "station": "MC #1",
  },
  {
    "endActive": 2018-03-05T06:48:00.000Z,
    "endOccupied": 2018-03-05T07:00:00.000Z,
    "outlier": true,
    "parts": [
      {
        "oper": "abcd",
        "part": "part1-1",
      },
    ],
    "startTime": 2018-03-05T06:20:00.000Z,
    "station": "MC #1",
  },
]
`;

exports[`creates cycles clipboard table > cycle clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Inspection
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Target Min
        </th>
        <th>
          Median Elapsed Min
        </th>
        <th>
          Median Deviation
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 AM
        </td>
        <td>
          partk-3
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pali
        </td>
        <td>
          serialo
        </td>
        <td>
          workw
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:28 AM
        </td>
        <td>
          partk-3
        </td>
        <td>
          MC #1
        </td>
        <td>
          pali
        </td>
        <td>
          serialo
        </td>
        <td>
          workw
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 AM
        </td>
        <td>
          partk-3
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pali
        </td>
        <td>
          serialo
        </td>
        <td>
          workw
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          MC #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:05 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palp
        </td>
        <td>
          serialt
        </td>
        <td>
          work5
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:43 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          MC #1
        </td>
        <td>
          palp
        </td>
        <td>
          serialt
        </td>
        <td>
          work5
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:53 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palp
        </td>
        <td>
          serialt
        </td>
        <td>
          work5
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates cycles clipboard table > cycle filtered clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Inspection
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Target Min
        </th>
        <th>
          Median Elapsed Min
        </th>
        <th>
          Median Deviation
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          MC #1
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partm-2
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palc
        </td>
        <td>
          serialf
        </td>
        <td>
          workv
        </td>
        <td>
          Insp1[success]
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
        <td>
          0.3
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;

exports[`creates log entries clipboard table > events clipboard table 1`] = `
<div>
  <table>
    

    <thead>
      <tr>
        <th>
          Date
        </th>
        <th>
          Part
        </th>
        <th>
          Station
        </th>
        <th>
          Pallet
        </th>
        <th>
          Serial
        </th>
        <th>
          Workorder
        </th>
        <th>
          Result
        </th>
        <th>
          Elapsed Min
        </th>
        <th>
          Active Min
        </th>
      </tr>
    </thead>
    

    <tbody>
      

      <tr>
        <td>
          Mar 5, 2018, 12:05 AM
        </td>
        <td>
          part5-3
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pals
        </td>
        <td>
          serial2
        </td>
        <td>
          work6
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:10 AM
        </td>
        <td>
          part5-3
        </td>
        <td>
          Stocker
        </td>
        <td>
          pals
        </td>
        <td>
          serial2
        </td>
        <td>
          work6
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:43 AM
        </td>
        <td>
          part5-3
        </td>
        <td>
          MC #1
        </td>
        <td>
          pals
        </td>
        <td>
          serial2
        </td>
        <td>
          work6
        </td>
        <td>
          progv
        </td>
        <td>
          30.0
        </td>
        <td>
          30.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:53 AM
        </td>
        <td>
          part5-3
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pals
        </td>
        <td>
          serial2
        </td>
        <td>
          work6
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 12:58 AM
        </td>
        <td>
          part5-3
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serial2
        </td>
        <td>
          work6
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 5, 2018, 1:05 AM
        </td>
        <td>
          part5-3
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serial2
        </td>
        <td>
          work6
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 PM
        </td>
        <td>
          partx-2
        </td>
        <td>
          L/U #1
        </td>
        <td>
          palo
        </td>
        <td>
          serialx
        </td>
        <td>
          workb
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:10 PM
        </td>
        <td>
          partx-2
        </td>
        <td>
          Stocker
        </td>
        <td>
          palo
        </td>
        <td>
          serialx
        </td>
        <td>
          workb
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:33 PM
        </td>
        <td>
          partx-2
        </td>
        <td>
          MC #1
        </td>
        <td>
          palo
        </td>
        <td>
          serialx
        </td>
        <td>
          workb
        </td>
        <td>
          progp
        </td>
        <td>
          20.0
        </td>
        <td>
          20.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 PM
        </td>
        <td>
          partx-2
        </td>
        <td>
          L/U #2
        </td>
        <td>
          palo
        </td>
        <td>
          serialx
        </td>
        <td>
          workb
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:48 PM
        </td>
        <td>
          partx-2
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialx
        </td>
        <td>
          workb
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:55 PM
        </td>
        <td>
          partx-2
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serialx
        </td>
        <td>
          workb
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:05 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          L/U #1
        </td>
        <td>
          pal0
        </td>
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td>
          LOAD
        </td>
        <td>
          6.0
        </td>
        <td>
          6.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:10 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          Stocker
        </td>
        <td>
          pal0
        </td>
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td />
        <td>
          4.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:28 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          MC #1
        </td>
        <td>
          pal0
        </td>
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td>
          progk
        </td>
        <td>
          15.0
        </td>
        <td>
          15.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:38 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          L/U #2
        </td>
        <td>
          pal0
        </td>
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td>
          UNLOAD
        </td>
        <td>
          3.0
        </td>
        <td>
          3.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:43 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          Signal Insp1
        </td>
        <td />
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td>
          True
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

      <tr>
        <td>
          Mar 4, 2018, 9:50 AM
        </td>
        <td>
          part4-1
        </td>
        <td>
          Inspect Insp1
        </td>
        <td />
        <td>
          serialo
        </td>
        <td>
          work2
        </td>
        <td>
          Succeeded
        </td>
        <td>
          0.0
        </td>
        <td>
          0.0
        </td>
      </tr>
      

    </tbody>
    

  </table>
</div>
`;
